--- a/smartcity-frontend/package.json
+++ b/smartcity-frontend/package.json
@@ -26,8 +26,8 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.16",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
@@ -36,6 +36,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
+    "typescript": "^5.9.3",
     "vite": "npm:rolldown-vite@7.1.14"
   },
   "overrides": {
